src/test/ui/coherence/coherence-conflicting-negative-trait-impl.stderr
error[E0119]: conflicting implementations of trait `std::marker::Send` for type `TestType<_>`:
  --> $DIR/coherence-conflicting-negative-trait-impl.rs:11:1
   |
LL | unsafe impl<T: MyTrait+'static> Send for TestType<T> {}
   | ---------------------------------------------------- first implementation here
LL | 
LL | impl<T: MyTrait> !Send for TestType<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestType<_>`

error[E0119]: conflicting implementations of trait `std::marker::Send` for type `TestType<_>`:
  --> $DIR/coherence-conflicting-negative-trait-impl.rs:14:1
   |
LL | unsafe impl<T: MyTrait+'static> Send for TestType<T> {}
   | ---------------------------------------------------- first implementation here
...
LL | unsafe impl<T:'static> Send for TestType<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestType<_>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
